--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "element": "^0.1.4",
+    "element-ui": "^2.13.0",
+    "js-cookie": "^2.2.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mockjs": "^1.1.0",
+    "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
